--- a/AnkiEditor/AnkiEditor.csproj
+++ b/AnkiEditor/AnkiEditor.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CrowdAnkiSchema\CrowdAnkiSchema.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="regex.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
