--- a/CrowdAnkiSchema/CrowdAnkiSchema.csproj
+++ b/CrowdAnkiSchema/CrowdAnkiSchema.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="regex.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
